fix: some more copyright and url changes

--- a/test/projects/HarnessTemplate/README
+++ b/test/projects/HarnessTemplate/README
@@ -1,4 +1,4 @@
-Welcome to your Appcelerator Titanium Mobile Project
+Welcome to your TiDev Titanium Mobile Project
 
 This is a blank project.  Start by editing your application's app.js to 
 make your first mobile project using Titanium.
@@ -8,8 +8,8 @@ make your first mobile project using Titanium.
 ----------------------------------
 Stuff our legal folk make us say:
 
-Appcelerator, Appcelerator Titanium and associated marks and logos are 
-trademarks of Appcelerator, Inc. 
+TiDev, TiDev Titanium and associated marks and logos are 
+trademarks of TiDev, Inc. 
 
 Titanium is Copyright TiDev, Inc. 04/07/2022-Present
 
